Add jquery file and update about

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 						<ul>
 							<li>I have fun <strong>teaching</strong>;</li>
 							<li>I <strong>glue</strong> myself to my kindle;</li>
-							<li>I <strong>lift</strong> weights, bike, climb, &amp; <strong>eat</strong> a lot;</li>
-							<li>And I'm an avid <strong>cuddler</strong> in winter.</li>
+							<li>I <strong>lift</strong> weights, bike, climb, &amp; love to <strong>eat</strong>;</li>
+							<li>And I enjoy a <strong>good</strong> beer.</li>
 						</ul>
 					</div>
 					<div class="col-1-3">
