--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 				<ul class="clearfix">
 					<li><a href="#profile">Pro<span>file</span></a></li>
 					<li><a href="#skills">Ski<span>lls</span></a></li>
+					<li><a href="#portfolio">Pro<span>jects</span></a></li>
 					<li><a href="#experience">Exp<span>erience</span></a></li>
 					<li><a href="#education">Edu<span>cation</span></a></li>
-					<li><a href="#portfolio">Por<span>tfolio</span></a></li>
+
 					<li><a href="#contact">Con<span>tact</span></a></li>
 				</ul>
 			</nav>
@@ -102,8 +103,8 @@
 						<p>A good developer is always up to the latest news, trends and techniques. For that, one has to get around and filter information from all possible sources. So... I get around and roam. And here is where I roam freely:</p>
 
 						<ul class="social-links clearfix">
-							<li><a href="https://github.com/rhonsby" class="rotate" title="Github"><i class="icon-github-sign"></i></a></li>
 							<li><a href="https://linkedin.com/in/rhonsby" title="LinkedIn"><i class="icon-linkedin-sign"></i></a></li>
+							<li><a href="https://github.com/rhonsby" class="rotate" title="Github"><i class="icon-github-sign"></i></a></li>
 							<li><a href="https://twitter.com/rhonsby" title="Twitter"><i class="icon-twitter-sign"></i></a></li>
 							<li><a href="http://rhonsby.tumblr.com" title="Tumblr"><i class="icon-tumblr-sign"></i></a></li>
 						</ul>
@@ -286,41 +287,25 @@
 				<div class="row">
 					<div class="col-full">
 						<h2 class="section-title">Let's get in touch</h2>
-						<h3 class='section-title'>via email: rhonsby [at] gmail.com</h3>
+						<h3 class='section-title'>via email: rhonsby@gmail.com</h3>
 						<div class="centered line"></div>
 					</div>
 				</div>
 
 				<div class="row section-content">
 					<div class="col-1-3 col-wrap centered text-center">
-						<div id="form-message"></div>
-						<form id="form-contact" name="form-contact">
-							<div class="col-full">
-								<label for="name">What's your name?</label>
-								<input type="text" name="name" id="name" value="">
-							</div>
-							<div class="col-full">
-								<label for="name">What's your e-mail?</label>
-								<input type="text" name="email" id="email" value="">
-							</div>
-							<div class="col-full">
-								<label for="name">What do you have in mind?</label>
-								<textarea name="message" id="message" rows="4"></textarea>
-							</div>
-							<div class="col-full">
-								<a href="#" class="button button-medium button-submit" id="submit-contact">Send the pidgeons!</a>
-							</div>
-						</form>
-					</div>
-
-					<div class="separator"></div>
-
-					<div class="col-1-3 centered text-center">
-						<a href="#">Click here for my printable resume</a>
+						<h3><a href='http://linkedin.com/in/rhonsby'>LinkedIn</a></h3>
+						<h3><a href='http://linkedin.com/in/rhonsby'>GitHub</a></h3>
+						<h3><a href='assets/pdf/resume.pdf'>Resume</a></h3>
 					</div>
 				</div>
 			</div>
+
+			<h4 class='center text-center section-title' id='last-updated'>
+				Last updated on June 1st, 2014.
+			</h4>
 		</section>
+
 
 		<!-- Loading: jQuery -->
 		<script src="assets/js/jquery-1.10.2.min.js"></script>
