Modify home page and add CNAME

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-full">
+						<h2 class="section-title">Looking for a self-driven developer?</h2>
 						<h2 class="section-title">Let's get in touch</h2>
 						<h3 class='section-title'>via email: rhonsby@gmail.com</h3>
 						<div class="centered line"></div>
