Remove designer title

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="row"><div class="col-1-4 centered line"></div></div>
 					<div class="row">
-						<div class="col-full"><h4>Web Developer &amp; Designer</h4></div>
+						<div class="col-full"><h4>Web Developer</h4></div>
 					</div>
 				</div>
 			</div>
