Increase size of project icons. Add Trellino

--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
 
 					<!-- Portfolio items -->
 					<div class="row projects">
-						<div class="col-1-6 project full-stack"><a href="http://hackstarter.co" target='_blank' title="Project 1"><img class='project-object' src="assets/img/hip.jpg" alt=""></a></div>
-						<div class="col-1-6 project games"><a href="http://roberthonsby.com/snake" title="Project 2"><img class='project-object' src="assets/img/snake.png" alt=""></a></div>
+						<div class="col-1-6 project full-stack"><a href="http://hackstarter.co" target='_blank' title="Project 1"><img class='project-object' src="assets/img/hackstarter.jpg" alt=""></a></div>
+						<div class="col-1-6 project full-stack"><a href="http://trellino-backbone.herokuapp.com" target='_blank' title="Project 1"><img class='project-object' src="assets/img/trellino.png" alt=""></a></div>
+						<div class="col-1-6 project games"><a href="http://roberthonsby.com/snake" title="Project 2"><img class='project-object' src="assets/img/snake2.png" alt=""></a></div>
 					</div>
 				</div>
 			</div>
