--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 							<ul class="filters">
 								<li class="filter" data-filter="all">All</li>
 								<li class="filter" data-filter="full-stack">Full-Stack</li>
-								<li class="filter" data-filter="games">Games</li>
+								<li class="filter" data-filter="javascript">Javascript</li>
+								<li class="filter" data-filter="node">Node</li>
 							</ul>
 						</div>
 					</div>
@@ -191,9 +192,10 @@
 					<!-- Portfolio items -->
 					<div class="row projects">
 						<div class="col-1-6 project full-stack"><a href="http://hackstarter.co" target='_blank' title="Project 1"><img class='project-object' src="assets/img/hackstarter.jpg" alt=""></a></div>
-						<div class="col-1-6 project full-stack"><a href="http://trellino-backbone.herokuapp.com" target='_blank' title="Project 1"><img class='project-object' src="assets/img/trellino.png" alt=""></a></div>
-						<div class="col-1-6 project games"><a href="http://roberthonsby.com/snake" title="Project 2"><img class='project-object' src="assets/img/snake2.png" alt=""></a></div>
-						<div class="col-1-6 project games"><a href="http://roberthonsby.com/tic_tac_toe" title="Project 2"><img class='project-object' src="assets/img/tic_tac_toe.png" alt=""></a></div>
+						<div class="col-1-6 project full-stack"><a href="http://exigo.herokuapp.com" target='_blank' title="Project 1"><img class='project-object' src="assets/img/trellino.png" alt=""></a></div>
+						<div class="col-1-6 project javascript"><a href="http://roberthonsby.com/snake" title="Project 2" target='_blank'><img class='project-object' src="assets/img/snake2.png" alt=""></a></div>
+						<div class="col-1-6 project javascript"><a href="http://roberthonsby.com/tic_tac_toe" title="Project 2" target='_blank'><img class='project-object' src="assets/img/tic_tac_toe.png" alt=""></a></div>
+						<div class="col-1-6 project node"><a href="http://chatb0x.herokuapp.com" title="Project 2" target='_blank'><img class='project-object' src="assets/img/chatbox.png" alt=""></a></div>
 					</div>
 				</div>
 			</div>
