--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 					<li><a href="#portfolio">Pro<span>jects</span></a></li>
 					<li><a href="#experience">Exp<span>erience</span></a></li>
 					<li><a href="#education">Edu<span>cation</span></a></li>
-
 					<li><a href="#contact">Con<span>tact</span></a></li>
 				</ul>
 			</nav>
@@ -83,7 +82,7 @@
 
 						<p>"There are no secrets to success. It is the result of preparation, hard work, and learning from failure."</p>
 
-						<p>Enthusiatic developer who enjoys writing code at every layer of an application's stack. I discovered programming in college at a time when it was too late to change majors, but that didn't stop me from pursuing what quickly became my passion.</p>
+						<p>Enthusiatic and self-motivated developer who enjoys writing code for every layer of an application's stack. Interesting challenges and new technology make me happy.</p>
 					</div>
 					<div class="col-1-3">
 						<h4>Personal Interests</h4>
