Edit personal interests

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
 						<ul>
 							<li>I have fun <strong>teaching</strong>;</li>
-							<li>I <strong>glue</strong> myself to my kindle;</li>
-							<li>I <strong>lift</strong> weights, bike, climb, &amp; love to <strong>eat</strong>;</li>
+							<li>I'm <strong>attached</strong> to my kindle;</li>
+							<li>I work out, <strong>bike</strong>, &amp; love to <strong>eat</strong>;</li>
 							<li>And I enjoy a <strong>good</strong> beer.</li>
 						</ul>
 					</div>
