--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 						<div class="col-1-6 project full-stack"><a href="http://exigo.herokuapp.com" target='_blank' title="Project 1"><img class='project-object' src="assets/img/trellino.png" alt=""></a></div>
 						<div class="col-1-6 project javascript"><a href="http://roberthonsby.com/snake" title="Project 2" target='_blank'><img class='project-object' src="assets/img/snake2.png" alt=""></a></div>
 						<div class="col-1-6 project javascript"><a href="http://roberthonsby.com/tic_tac_toe" title="Project 2" target='_blank'><img class='project-object' src="assets/img/tic_tac_toe.png" alt=""></a></div>
+						<div class="col-1-6 project javascript"><a href="http://roberthonsby.com/asteroids" title="Project 2" target='_blank'><img class='project-object' src="assets/img/asteroids.png" alt=""></a></div>
 						<div class="col-1-6 project node"><a href="http://chatb0x.herokuapp.com" title="Project 2" target='_blank'><img class='project-object' src="assets/img/chatbox.png" alt=""></a></div>
 					</div>
 				</div>
