--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 					<div class="col-1-3 col-wrap centered text-center">
 						<h3><a href='http://linkedin.com/in/rhonsby'>LinkedIn</a></h3>
 						<h3><a href='http://github.com/rhonsby'>GitHub</a></h3>
-						<h3><a href='assets/pdf/resume.pdf'>Resume</a></h3>
+						<h3><a href='assets/pdf/resume.pdf' download>Resume</a></h3>
 					</div>
 				</div>
 			</div>
