--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 							<div class="job-attributions">End-user support <span class="bullet">&bull;</span> Front-end consultant</div>
 						</div>
 
-						<div class="col-full text-center">Provided front-end support to the marketing department to help maintain and improve the company’s primary website and e-commerce website in addition to support to end-users with technical issues such as software, hardware, and networking.</div>
+						<div class="col-full text-center">Provided front-end support to the marketing department to help maintain and improve the company’s primary and e-commerce properties. Support end-users with technical issues such as software, hardware, and networking.</div>
 
 						<div class="row">
 							<div class="col-2-3 col-wrap centered">
