--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 			</div>
 
 			<h4 class='center text-center section-title' id='last-updated'>
-				Last updated on June 1st, 2014.
+				Last updated on June 13th, 2014.
 			</h4>
 		</section>
 
