Add TruckSpy project

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
 							</a>
 							<p>Parakeet</p>
 						</div>
+						<div class="col-1-6 project full-stack">
+							<a href="http://truckspy.herokuapp.com" target='_blank' title="Project 1">
+								<img class='project-object' src="assets/img/truckspy.png" alt="">
+							</a>
+							<p>TruckSpy</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -343,7 +349,7 @@
 			</div>
 
 			<h4 class='center text-center section-title' id='last-updated'>
-				Last updated on June 13th, 2014.
+				Last updated on June 19th, 2014.
 			</h4>
 		</section>
 
